Adds code to remove last access file when an app is destroyed.

--- a/cloud-sdk/node/conf/cloud-sdk-node.conf
+++ b/cloud-sdk/node/conf/cloud-sdk-node.conf
@@ -7,3 +7,4 @@ user_min_uid=500
 user_max_uid=3000
 plugins=cloud-sdk-node/express/unix_user_observer
 cartridges_path=/usr/libexec/li/cartridges
+last_access_dir=/var/lib/libra/.last_access
