--- a/cartridges/jbossas-7.0/info/bin/standalone.conf
+++ b/cartridges/jbossas-7.0/info/bin/standalone.conf
@@ -58,7 +58,7 @@ sed -i -e "s/\${mysql.enabled}/$MYSQL_ENABLED/g" \
 # Specify options to pass to the Java VM.
 #
 if [ "x$JAVA_OPTS" = "x" ]; then
-   JAVA_OPTS="-Xmx256m -XX:MaxPermSize=128m -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -Dorg.apache.tomcat.util.LOW_MEMORY=true -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true "
+   JAVA_OPTS="-client -Xmx256m -XX:MaxPermSize=128m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true "                                                                                                                                                
 fi
 
 # Add the user module path ahead of the server modules root
