Created RPM spec file for broker Added configs etc to enable broker to install properly Updated node/controller/common to remove unused dependencies Moved abstract cartridge into broker Added oddjob configuration to execute cdk/cartridge scripts Fixing httpd proxy creation in abstract cart to not use mod_bw Fixing httpd proxy creation in abstract cart to create proxy file under cloud-sdk instead of libra

--- a/cloud-sdk/node/conf/cloud-sdk-node.conf
+++ b/cloud-sdk/node/conf/cloud-sdk-node.conf
@@ -1,10 +1,10 @@
-user_base_dir=/var/lib/libra
-user_skel_dir=/etc/libra/skel
-user_shell=/usr/bin/trap-user
-user_gecos=libra guest
+user_base_dir=/var/lib/cloud-sdk
+user_skel_dir=/etc/cloud-sdk/skel
+user_shell=/usr/bin/cdk-trap-user
+user_gecos=cloud-sdk guest
 cloud_name=OPENSHIFT
 user_min_uid=500
 user_max_uid=3000
-plugins=cloud-sdk-node/express/unix_user_observer
+plugins=
 cartridges_path=/usr/libexec/li/cartridges
-last_access_dir=/var/lib/libra/.last_access
+last_access_dir=/var/lib/li/.last_access
