--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -1,4 +1,3 @@
-//
 // named.conf
 //
 // Provided by Red Hat bind package to configure the ISC BIND named(8) DNS
@@ -9,6 +8,7 @@
 
 options {
 	listen-on port 53 { 127.0.0.1; };
+	listen-on port 953 { 127.0.0.1; };
 	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
