disabled recursion to allow correct resolution of ec2 internals

--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -15,7 +15,7 @@ options {
         statistics-file "/var/named/data/named_stats.txt";
         memstatistics-file "/var/named/data/named_mem_stats.txt";
 	allow-query     { localhost; };
-	recursion yes;
+	recursion no;
 
 	dnssec-enable yes;
 	dnssec-validation yes;
