disabled dnssec: it interferes with forwarding EC2 internal requests

--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -17,9 +17,10 @@ options {
 	allow-query     { localhost; };
 	recursion no;
 
-	dnssec-enable yes;
-	dnssec-validation yes;
-	dnssec-lookaside auto;
+        // dnssec interferes with EC2 internal queries when forwarding
+	// dnssec-enable yes;
+	// dnssec-validation yes;
+	// dnssec-lookaside auto;
 
 	/* Path to ISC DLV key */
 	bindkeys-file "/etc/named.iscdlv.key";
