re-enable lookup recursion

--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -15,7 +15,7 @@ options {
         statistics-file "/var/named/data/named_stats.txt";
         memstatistics-file "/var/named/data/named_mem_stats.txt";
 	allow-query     { localhost; };
-	recursion no;
+	recursion yes;
 
         // dnssec interferes with EC2 internal queries when forwarding
 	// dnssec-enable yes;
