re-enable local DNS

--- a/misc/devenv/etc/dhclient-eth0.conf
+++ b/misc/devenv/etc/dhclient-eth0.conf
@@ -1,3 +1,3 @@
 # prepend localhost for DNS lookup in dev and test
 # MAL Activate when local BIND configuration is working 20120227
-#prepend domain-name-servers 127.0.0.1;
+prepend domain-name-servers 127.0.0.1;
