--- a/misc/devenv/etc/dhclient-eth0.conf
+++ b/misc/devenv/etc/dhclient-eth0.conf
@@ -1,2 +1,3 @@
 # prepend localhost for DNS lookup in dev and test
-prepend domain-name-servers 127.0.0.1;
+# Still have to remove the comment when this works MAL 20120228
+#prepend domain-name-servers 127.0.0.1;
