Cleanup the standalone conf/sh to be consistent with 7.1.0.Final version

--- a/cartridges/jbossas-7/info/bin/standalone.conf
+++ b/cartridges/jbossas-7/info/bin/standalone.conf
@@ -62,7 +62,7 @@ if [ "x$JAVA_OPTS" = "x" ]; then
 fi
 
 # Add the user module path ahead of the server modules root
-export MODULEPATH="${OPENSHIFT_APP_DIR}${OPENSHIFT_APP_TYPE}"/standalone/configuration/modules:"${OPENSHIFT_APP_DIR}jbossas-7"/modules
+export JBOSS_MODULEPATH="${OPENSHIFT_APP_DIR}${OPENSHIFT_APP_TYPE}"/standalone/configuration/modules:"${OPENSHIFT_APP_DIR}jbossas-7"/modules
 
 # Map all OPENSHIFT_X env variable to JVM system properties (US1174)
 echo importing env vars...
