dont go straight to root to recurse

--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -46,10 +46,10 @@ controls {
 		allow { 127.0.0.1; } keys { "rndc-key"; };
 };
 
-zone "." IN {
-	type hint;
-	file "named.ca";
-};
+// zone "." IN {
+//	ype hint;
+//	file "named.ca";
+//};
 
 include "/etc/named.rfc1912.zones";
 
