Renaming Cloud-SDK -> StickShift

--- a/stickshift/broker/misc/stickshift-dbus.conf
+++ b/stickshift/broker/misc/stickshift-dbus.conf
@@ -6,13 +6,13 @@
 
 <busconfig>
   <policy user="root">
-    <allow own="com.redhat.oddjob.cloud_sdk"/>
+    <allow own="com.redhat.oddjob.stickshift"/>
   </policy>
 
   <policy context="default">
-    <allow send_destination="com.redhat.oddjob.cloud_sdk"
-           send_path="/com/redhat/oddjob/cloud_sdk"
-           send_interface="com.redhat.oddjob.cloud_sdk"
+    <allow send_destination="com.redhat.oddjob.stickshift"
+           send_path="/com/redhat/oddjob/stickshift"
+           send_interface="com.redhat.oddjob.stickshift"
            send_member="run_command"/>
   </policy>
 </busconfig>
