--- a/stickshift/broker/misc/oddjobd-ss-exec.conf
+++ b/stickshift/broker/misc/oddjobd-ss-exec.conf
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <oddjobconfig>
-  <service name="com.redhat.oddjob.cloud_sdk">
-    <object name="/com/redhat/oddjob/cloud_sdk">
+  <service name="com.redhat.oddjob.stickshift">
+    <object name="/com/redhat/oddjob/stickshift">
       <interface name="org.freedesktop.DBus.Introspectable">
         <allow min_uid="0" max_uid="0"/>
       </interface>
 
-      <interface name="com.redhat.oddjob.cloud_sdk">
+      <interface name="com.redhat.oddjob.stickshift">
         <method name="run_command">
           <helper exec="/usr/bin/ss-exec-command " arguments="1" argument_passing_method="cmdline"/>
           <allow user="apache"/>
