Abstract cart and node changes to li => stickshift, libra => stickshift

--- a/stickshift/node/conf/stickshift-node.conf
+++ b/stickshift/node/conf/stickshift-node.conf
@@ -1,10 +1,18 @@
-user_base_dir=/var/lib/stickshift
-user_skel_dir=/etc/stickshift/skel
-user_shell=/usr/bin/ss-trap-user
-user_gecos=stickshift guest
-cloud_name=OPENSHIFT
-user_min_uid=500
-user_max_uid=3000
-plugins=
-cartridges_path=/usr/libexec/li/cartridges
-last_access_dir=/var/lib/li/.last_access
+GEAR_BASE_DIR="/var/lib/stickshift" 				  #gear root directory
+GEAR_SKEL_DIR="/etc/stickshift/skel"				  #skel files to use when building a gear
+GEAR_SHELL="/usr/bin/ss-trap-user"					  #shell to use for the gear
+GEAR_GECOS="StickShift guest"						  #Gecos information to populate for the gear user
+CLOUD_NAME="OPENSHIFT"								  #Cloud name prefix
+GEAR_MIN_UID=500									  #Lower bound of UID used to create gears
+GEAR_MAX_UID=6500									  #Upper bound of UID used to create gears
+STICKSHIFT_NODE_PLUGINS=											  #Extentions to load when customize/observe stickshift-node models
+CARTRIDGE_BASE_PATH="/usr/libexec/stickshift/cartridges"  #Locations where cartridges are installed
+LAST_ACCESS_DIR="/var/lib/stickshift/.last_access"	  #Location to maintain last accessed time for gears
+PROXY_MIN_PORT_NUM=35531								  #Lower bound of port numbers used to proxy ports externally
+PROXY_PORTS_PER_GEAR=5                                 #Number of proxy ports available per gear
+CLOUD_DOMAIN="rhcloud.com"							  #Domain suffix to use for applications (Must match broker config)
+BROKER_HOST="openshift.redhat.com"					  #DNS name of broker server
+CREATE_APP_SYMLINKS=0								  #If set to 1, creates gear-name symlinks to the UUID directories (debugging only)
+INSTANCE_ID="localhost"
+# PUBLIC_IP_OVERRIDE='127.0.0.1'								  #Override public IP of this node instead of auto-detecting
+# PUBLIC_HOSTNAME_OVERRIDE='localhost.localdomain'			  #Override public hostname of this node instead of auto-detecting
