--- a/cartridges/nodejs-0.6/info/manifest.yml
+++ b/cartridges/nodejs-0.6/info/manifest.yml
@@ -19,3 +19,20 @@ Descriptor:
   Scaling:
     Min: 1
     Max: -1
+  Publishes:
+    get-doc-root:
+      Type: "FILESYSTEM:doc-root"
+    publish_http_url:
+      Type: "NET_TCP:httpd-proxy-info"
+    publish_git_url:
+      Type: "NET_TCP:git-url-info"
+  Subscribes:
+    set-mysql-connection-info:
+      Type: "NET_TCP:db:mysql"
+      Required : false
+    set-postgres-connection-info:
+      Type: "NET_TCP:db:postgres"
+      Required : false
+    set-mongo-connection-info:
+      Type: "NET_TCP:db:mongodb"
+      Required : false
