--- a/cartridges/rack-1.1/info/manifest.yml
+++ b/cartridges/rack-1.1/info/manifest.yml
@@ -38,6 +38,10 @@ Start-Order: rack
 Publishes:
   get-doc-root:
     Type: "FILESYSTEM:doc-root"
+  publish_http_url:
+    Type: "NET_TCP:httpd-proxy-info"
+  publish_git_url:
+    Type: "NET_TCP:git-url-info"
 Subscribes:
   set-mysql-connection-info:
     Type: "NET_TCP:db:mysql"
