--- a/cartridges/jbossas-7/info/manifest.yml
+++ b/cartridges/jbossas-7/info/manifest.yml
@@ -31,6 +31,10 @@ Profiles:
             Type: "FILESYSTEM:doc-root"
           get-internal-uri:
             Type: "NET_TCP:http"
+          publish_http_url:
+            Type: "NET_TCP:httpd-proxy-info"
+          publish_git_url:
+            Type: "NET_TCP:git-url-info"
         Subscribes:
           set-jdbc-info:
             Type: "NET_TCP:jdbc"
