Updating raw cartridge li/libra => stickshift

--- a/cartridges/raw-0.1/info/manifest.yml
+++ b/cartridges/raw-0.1/info/manifest.yml
@@ -10,6 +10,9 @@ Requires:
 Conflicts:
 Native-Requires:
 Architecture: noarch
+Publishes:
+  get-doc-root:
+    Type: "FILESYSTEM:doc-root"
 Reservations:
   - MEM >= 10MB
 Scaling:
