--- a/cartridges/raw-0.1/info/manifest.yml
+++ b/cartridges/raw-0.1/info/manifest.yml
@@ -1,6 +1,6 @@
 Name: diy-0.1
 Display-Name: diy v1.0.0 (noarch)
-Description: Cartridge providing raw compute power to applications
+Description: Experimental cartridge providing a way to try unsupported languages, frameworks, and middleware on OpenShift
 Version: 1.0.0
 License: ASL 2.0
 Vendor:
