Updating rack-1.1 li/libra => stickshift

--- a/cartridges/rack-1.1/info/configuration/etc/conf/httpd.conf
+++ b/cartridges/rack-1.1/info/configuration/etc/conf/httpd.conf
@@ -70,7 +70,7 @@ UseCanonicalName Off
     Options FollowSymLinks
     AllowOverride None
 </Directory>
-<Directory "/var/lib/libra/">
+<Directory "/var/lib/stickshift/">
     Options Indexes FollowSymLinks
     AllowOverride None
     Order allow,deny
@@ -252,4 +252,4 @@ ExtendedStatus On
 #    Allow from .example.com
 #</Location>
 
-include /usr/libexec/li/cartridges/ruby-1.8/info/configuration/etc/conf.d/passenger.conf
+include /usr/libexec/stickshift/cartridges/ruby-1.8/info/configuration/etc/conf.d/passenger.conf
