dont forward FIRST, forward ONLY

--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -50,7 +50,7 @@ controls {
 //	ype hint;
 //	file "named.ca";
 //};
-include "upstream_hints.conf" ;
+//include "upstream_hints.conf" ;
 
 include "/etc/named.rfc1912.zones";
 
