partial set of libra-to-stickshift changes for haproxy

--- a/stickshift/node/conf/stickshift-node.conf
+++ b/stickshift/node/conf/stickshift-node.conf
@@ -14,5 +14,6 @@ CLOUD_DOMAIN="rhcloud.com"							  #Domain suffix to use for applications (Must 
 BROKER_HOST="openshift.redhat.com"					  #DNS name of broker server
 CREATE_APP_SYMLINKS=0								  #If set to 1, creates gear-name symlinks to the UUID directories (debugging only)
 INSTANCE_ID="localhost"
+STICKSHIFT_HTTP_CONF_DIR="/etc/httpd/conf.d/stickshift"
 # PUBLIC_IP_OVERRIDE='127.0.0.1'								  #Override public IP of this node instead of auto-detecting
 # PUBLIC_HOSTNAME_OVERRIDE='localhost.localdomain'			  #Override public hostname of this node instead of auto-detecting
