--- a/cartridges/jbossas-7/info/bin/standalone.conf
+++ b/cartridges/jbossas-7/info/bin/standalone.conf
@@ -51,6 +51,7 @@ fi
 sed -i -e "s/\${mysql.enabled}/$MYSQL_ENABLED/g" \
        -e "s/\${postgresql.enabled}/$POSTGRESQL_ENABLED/g" \
        -e "s/<loopback-address value=\".*\"\/>/<loopback-address value=\"${OPENSHIFT_INTERNAL_IP}\"\/>/g" \
+       -e "s/\${env.OPENSHIFT_JBOSS_CLUSTER}/$OPENSHIFT_JBOSS_CLUSTER/g" \
        -e "s/\${OPENSHIFT_INTERNAL_IP}/$OPENSHIFT_INTERNAL_IP/g" "${OPENSHIFT_APP_DIR}${OPENSHIFT_APP_TYPE}"/standalone/configuration/standalone.xml > /dev/null 2>&1
 
 
