--- a/cartridges/phpmyadmin-3.4/info/configuration/etc/conf/httpd_nolog.conf
+++ b/cartridges/phpmyadmin-3.4/info/configuration/etc/conf/httpd_nolog.conf
@@ -70,7 +70,7 @@ UseCanonicalName Off
     Options FollowSymLinks
     AllowOverride None
 </Directory>
-<Directory "/var/lib/libra/">
+<Directory "/var/lib/stickshift/">
     Options Indexes FollowSymLinks
     AllowOverride None
     Order allow,deny
@@ -252,4 +252,4 @@ ExtendedStatus On
 #    Allow from .example.com
 #</Location>
 
-include /usr/libexec/li/cartridges/embedded/phpmyadmin-3.4/info/configuration/etc/conf.d/php.conf
+include /usr/libexec/stickshift/cartridges/embedded/phpmyadmin-3.4/info/configuration/etc/conf.d/php.conf
