--- a/cartridges/rockmongo-1.1/info/configuration/etc/conf/httpd_nolog.conf
+++ b/cartridges/rockmongo-1.1/info/configuration/etc/conf/httpd_nolog.conf
@@ -70,7 +70,7 @@ UseCanonicalName Off
     Options FollowSymLinks
     AllowOverride None
 </Directory>
-<Directory "/var/lib/libra/">
+<Directory "/var/lib/stickshift/">
     Options Indexes FollowSymLinks
     AllowOverride None
     Order allow,deny
