--- a/cartridges/mysql-5.1/info/manifest.yml
+++ b/cartridges/mysql-5.1/info/manifest.yml
@@ -15,7 +15,7 @@ Profiles:
     Components:
       mysql-server:
         Publishes:
-          get-db-connection-info:
+          publish-db-connection-info:
             Type: "NET_TCP:db:connection-info"
           get-mysql-connection-info:
             Type: "NET_TCP:db:mysql"
