--- a/cartridges/nodejs-0.6/info/manifest.yml
+++ b/cartridges/nodejs-0.6/info/manifest.yml
@@ -22,9 +22,9 @@ Descriptor:
   Publishes:
     get-doc-root:
       Type: "FILESYSTEM:doc-root"
-    publish_http_url:
+    publish-http-url:
       Type: "NET_TCP:httpd-proxy-info"
-    publish_git_url:
+    publish-git-url:
       Type: "NET_TCP:git-url-info"
   Subscribes:
     set-mysql-connection-info:
