Finish packaging bind-local:   install named configuration files   install dhcpnamedforward SELinux policy   install dhclient config and hooks to generate resolv.conf and forwarders   Convert named-local script to bourne shell   Drop dependency on ruby for named-local service control

--- a/misc/bind-local/usr/share/bind-local/etc/named.conf
+++ b/misc/bind-local/usr/share/bind-local/etc/named.conf
@@ -37,10 +37,8 @@ logging {
         };
 };
 
-key "rndc-key" {
-	algorithm hmac-md5;
-	secret "jLudX+c5m+gm8yCDKq9mrg==";
-};
+// use the default rndc key
+include "/etc/rndc.key";
  
 controls {
 	inet 127.0.0.1 port 953
