Mark style.scss as out of date so it is no longer generated, and ignore any .sass-cache directories created

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-.*.swp
 *~
-*.pyc
-*.pyo
 #*#
-.project
-.loadpath
 .idea
-.pydevproject
-*.komodoproject
 *.iml
-rhc/
+*.komodoproject
+.loadpath
+.project
+*.pyc
+.pydevproject
+*.pyo
 *.redcar*
+rhc/
+site/.sass-cache/
+.*.swp
