Add connector for setting db connection info.

--- a/cartridges/haproxy-1.4/info/manifest.yml
+++ b/cartridges/haproxy-1.4/info/manifest.yml
@@ -22,4 +22,7 @@ Subscribes:
   set-git-url:
     Type: "NET_TCP:git-url-info"
     Required: false
+  set-db-connection-info:
+    Type: "NET_TCP:db:connection-info"
+    Required: false
 
