Add the set-db-connection-info hook to all the frameworks.

--- a/cartridges/jbossas-7/info/manifest.yml
+++ b/cartridges/jbossas-7/info/manifest.yml
@@ -38,6 +38,9 @@ Profiles:
           publish_git_url:
             Type: "NET_TCP:git-url-info"
         Subscribes:
+          set-db-connection-info:
+            Type: "NET_TCP:db:connection-info"
+            Required: false
           set-jdbc-info:
             Type: "NET_TCP:jdbc"
           set_jboss_cluster:
