--- a/cartridges/www-dynamic-2.2/info/manifest.yml
+++ b/cartridges/www-dynamic-2.2/info/manifest.yml
@@ -19,4 +19,6 @@ Subscribes:
   set-proxy-url:
     Type: "STRING:proxy-path"
     Required: false
-
+  set-db-connection-info:
+    Type: "NET_TCP:db:connection-info"
+    Required: false
