--- a/cartridges/nodejs-0.6/info/manifest.yml
+++ b/cartridges/nodejs-0.6/info/manifest.yml
@@ -26,6 +26,9 @@ Publishes:
   publish-git-url:
     Type: "NET_TCP:git-url-info"
 Subscribes:
+  set-db-connection-info:
+    Type: "NET_TCP:db:connection-info"
+    Required: false
   set-mysql-connection-info:
     Type: "NET_TCP:db:mysql"
     Required : false
