--- a/stickshift/node/conf/stickshift-node.conf
+++ b/stickshift/node/conf/stickshift-node.conf
@@ -15,5 +15,7 @@ BROKER_HOST="openshift.redhat.com"					  #DNS name of broker server
 CREATE_APP_SYMLINKS=0								  #If set to 1, creates gear-name symlinks to the UUID directories (debugging only)
 INSTANCE_ID="localhost"
 STICKSHIFT_HTTP_CONF_DIR="/etc/httpd/conf.d/stickshift"
+PUBLIC_IP='127.0.0.1'                                        # The public IP address, this will be overridden (see OVERRIDE below)
+PUBLIC_HOSTNAME='localhost.localdomain'                      # The public hostname, this will be overridden (see OVERRIDE below)
 # PUBLIC_IP_OVERRIDE='127.0.0.1'								  #Override public IP of this node instead of auto-detecting
 # PUBLIC_HOSTNAME_OVERRIDE='localhost.localdomain'			  #Override public hostname of this node instead of auto-detecting
