--- a/node/conf/stickshift/stickshift-proxy.cfg
+++ b/node/conf/stickshift/stickshift-proxy.cfg
@@ -1,5 +1,5 @@
 #
-# Libra Proxy configuration (haproxy)
+# Stickshift Proxy configuration (haproxy)
 #
 # The copy of this file in /etc/stickshift is a template only.
 # The working version is in /var/lib/stickshift/.stickshift-proxy.d.
@@ -19,7 +19,7 @@ global
     daemon
 
     # turn on stats unix socket
-    stats socket /var/lib/haproxy/libra-proxy-stats
+    stats socket /var/lib/haproxy/stickshift-proxy-stats
 
 #---------------------------------------------------------------------
 # common defaults that all the 'listen' and 'backend' sections will
