jenkins does-not/need-not contain an expose-port, so dont raise a fatal exception if that fails on a scalable app

--- a/cartridges/jenkins-1.4/info/manifest.yml
+++ b/cartridges/jenkins-1.4/info/manifest.yml
@@ -17,6 +17,8 @@ Architecture: noarch
 Reservations:
   - MEM >= 100MB
 Publishes:
+  get-doc-root:
+    Type: "FILESYSTEM:doc-root"
   get-interface-url:
     Type: "NET_TCP:jenkins:url"
 Scaling:
