--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -37,10 +37,7 @@ logging {
         };
 };
 
-key "rndc-key" {
-	algorithm hmac-md5;
-	secret "jLudX+c5m+gm8ySSq9mrg==";
-};
+include "/etc/rndc.key";
  
 controls {
 	inet 127.0.0.1 port 953
