--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -37,8 +37,12 @@ logging {
         };
 };
 
-include "/etc/rndc.conf";
- 
+#include "/etc/rndc.key";
+key "rndc-key" {
+	algorithm hmac-md5;
+	secret "IC9fVfiPsaeE6ZRqq3b0yA==";
+};
+
 controls {
 	inet 127.0.0.1 port 953
 		allow { 127.0.0.1; } keys { "rndc-key"; };
