--- a/misc/devenv/etc/named.conf
+++ b/misc/devenv/etc/named.conf
@@ -37,7 +37,7 @@ logging {
         };
 };
 
-#include "/etc/rndc.key";
+//include "/etc/rndc.key";
 key "rndc-key" {
 	algorithm hmac-md5;
 	secret "IC9fVfiPsaeE6ZRqq3b0yA==";
