use resource limits to determine jboss heap size with placeholders for larger sizes

--- a/cartridges/jbossas-7/info/bin/standalone.conf
+++ b/cartridges/jbossas-7/info/bin/standalone.conf
@@ -53,13 +53,37 @@ sed -i -e "s/\${mysql.enabled}/$MYSQL_ENABLED/g" \
        -e "s/<loopback-address value=\".*\"\/>/<loopback-address value=\"${OPENSHIFT_INTERNAL_IP}\"\/>/g" \
        -e "s/\${env.OPENSHIFT_JBOSS_CLUSTER}/$OPENSHIFT_JBOSS_CLUSTER/g" \
        -e "s/\${OPENSHIFT_INTERNAL_IP}/$OPENSHIFT_INTERNAL_IP/g" "${OPENSHIFT_GEAR_DIR}${OPENSHIFT_GEAR_TYPE}"/standalone/configuration/standalone.xml > /dev/null 2>&1
+       
+resource_limits_file=`readlink -f /etc/stickshift/resource_limits.conf`
+resource_limits_file_name=`basename $resource_limits_file`
+node_profile=`echo ${resource_limits_file_name/*./}`
+case "$node_profile" in
+    micro)
+        memory_options="-client -Xmx100m -XX:MaxPermSize=100m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true"
+    ;;
+    small)
+        memory_options="-client -Xmx256m -XX:MaxPermSize=128m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true"
+    ;;
+    medium)
+        memory_options="-client -Xmx664m -XX:MaxPermSize=128m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true"
+    ;;
+    large)
+        memory_options="-Xmx1456m -XX:MaxPermSize=148m -XX:+AggressiveOpts"
+    ;;
+    exlarge)
+        memory_options="-Xmx2888m -XX:MaxPermSize=184m -XX:+AggressiveOpts"
+    ;;
+    jumbo)
+        memory_options="-Xmx5888m -XX:MaxPermSize=256m -XX:+AggressiveOpts"
+    ;;
+esac
 
 
 #
 # Specify options to pass to the Java VM.
 #
 if [ "x$JAVA_OPTS" = "x" ]; then
-   JAVA_OPTS="-client -Xmx256m -XX:MaxPermSize=128m -XX:+AggressiveOpts -Dorg.apache.tomcat.util.LOW_MEMORY=true -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true -Djboss.node.name=${OPENSHIFT_GEAR_DNS}"                                                                                                                                                
+   JAVA_OPTS="$memory_options -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true -Djboss.node.name=${OPENSHIFT_GEAR_DNS}"                                                                                                                                                
 fi
 
 # Add the user module path ahead of the server modules root
