--- a/cartridges/haproxy-1.4/info_embedded/manifest.yml
+++ b/cartridges/haproxy-1.4/info_embedded/manifest.yml
@@ -20,7 +20,7 @@ Subscribes:
     Type: "NET_TCP:httpd-proxy-info"
     Required : false
   set-git-url:
-    Type: "NET_TCP:git-url-info"
+    Type: "NET_TCP:ssh-endpoint-info"
     Required: false
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
