--- a/cartridges/nodejs-0.6/info/manifest.yml
+++ b/cartridges/nodejs-0.6/info/manifest.yml
@@ -23,8 +23,8 @@ Publishes:
     Type: "FILESYSTEM:doc-root"
   publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
-  publish-git-url:
-    Type: "NET_TCP:git-url-info"
+  publish-ssh-endpoint:
+    Type: "NET_TCP:ssh-endpoint-info"
 Subscribes:
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
