--- a/cartridges/perl-5.10/info/manifest.yml
+++ b/cartridges/perl-5.10/info/manifest.yml
@@ -22,10 +22,10 @@ Publishes:
     Type: "FILESYSTEM:doc-root"
   get-proxy-url:
     Type: "STRING:proxy-path"
-  publish_http_url:
+  publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
-  publish_git_url:
-    Type: "NET_TCP:git-url-info"
+  publish-ssh-endpoint:
+    Type: "NET_TCP:ssh-endpoint-info"
 Subscribes:
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
