--- a/cartridges/rack-1.1/info/manifest.yml
+++ b/cartridges/rack-1.1/info/manifest.yml
@@ -38,10 +38,10 @@ Start-Order: rack
 Publishes:
   get-doc-root:
     Type: "FILESYSTEM:doc-root"
-  publish_http_url:
+  publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
-  publish_git_url:
-    Type: "NET_TCP:git-url-info"
+  publish-ssh-endpoint:
+    Type: "NET_TCP:ssh-endpoint-info"
 Subscribes:
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
