--- a/cartridges/raw-0.1/info/manifest.yml
+++ b/cartridges/raw-0.1/info/manifest.yml
@@ -13,6 +13,10 @@ Architecture: noarch
 Publishes:
   get-doc-root:
     Type: "FILESYSTEM:doc-root"
+  publish-http-url:
+    Type: "NET_TCP:httpd-proxy-info"
+  publish-ssh-endpoint:
+    Type: "NET_TCP:ssh-endpoint-info"
 Subscribes:
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
