--- a/cartridges/haproxy-1.4/info/manifest.yml
+++ b/cartridges/haproxy-1.4/info/manifest.yml
@@ -19,8 +19,8 @@ Subscribes:
   set-proxy:
     Type: "NET_TCP:httpd-proxy-info"
     Required : false
-  set-git-url:
-    Type: "NET_TCP:ssh-endpoint-info"
+  set-gear-endpoints:
+    Type: "NET_TCP:gear-endpoint-info"
     Required: false
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
