--- a/cartridges/php-5.3/info/manifest.yml
+++ b/cartridges/php-5.3/info/manifest.yml
@@ -29,8 +29,8 @@ Publishes:
     Type: "FILESYSTEM:php-ini"
   publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
-  publish-ssh-endpoint:
-    Type: "NET_TCP:ssh-endpoint-info"
+  publish-gear-endpoint:
+    Type: "NET_TCP:gear-endpoint-info"
 Subscribes:
   set-db-connection-info:
     Type: "NET_TCP:db:connection-info"
