--- a/cartridges/haproxy-1.4/info/manifest.yml
+++ b/cartridges/haproxy-1.4/info/manifest.yml
@@ -15,6 +15,8 @@ Architecture: noarch
 Publishes:
   get-balancer-connection-info:
     Type: "NET_TCP:http:http"
+  get-doc-root:
+    Type: "FILESYSTEM:doc-root"
 Subscribes:
   set-proxy:
     Type: "NET_TCP:httpd-proxy-info"
