--- a/stickshift/node/conf/stickshift-node.conf
+++ b/stickshift/node/conf/stickshift-node.conf
@@ -10,8 +10,8 @@ CARTRIDGE_BASE_PATH="/usr/libexec/stickshift/cartridges"  #Locations where cartr
 LAST_ACCESS_DIR="/var/lib/stickshift/.last_access"	  #Location to maintain last accessed time for gears
 PROXY_MIN_PORT_NUM=35531								  #Lower bound of port numbers used to proxy ports externally
 PROXY_PORTS_PER_GEAR=5                                 #Number of proxy ports available per gear
-CLOUD_DOMAIN="rhcloud.com"							  #Domain suffix to use for applications (Must match broker config)
-BROKER_HOST="openshift.redhat.com"					  #DNS name of broker server
+CLOUD_DOMAIN="example.com"							  #Domain suffix to use for applications (Must match broker config)
+BROKER_HOST="localhost"					  #DNS name of broker server
 CREATE_APP_SYMLINKS=0								  #If set to 1, creates gear-name symlinks to the UUID directories (debugging only)
 INSTANCE_ID="localhost"
 STICKSHIFT_HTTP_CONF_DIR="/etc/httpd/conf.d/stickshift"
