Broker and site in devenv should use RackBaseURI and be relative to content Remove broker/site app_scope

--- a/misc/devenv/httpd/site/httpd/site.conf
+++ b/misc/devenv/httpd/site/httpd/site.conf
@@ -1,12 +1,8 @@
 ServerRoot "/var/www/stickshift/site/httpd"
-DocumentRoot "/var/www/stickshift/site/public"
+DocumentRoot "/var/www/html"
 Listen 127.0.0.1:3128
 User libra_passenger
 Group libra_user
-
-Alias /app/images /var/www/stickshift/site/public/images
-Alias /app/javascripts /var/www/stickshift/site/public/javascripts
-Alias /app/stylesheets /var/www/stickshift/site/public/stylesheets
 
 PassengerUser libra_passenger
 PassengerMaxPoolSize 80
@@ -14,7 +10,8 @@ PassengerMinInstances 2
 RailsEnv development
 PassengerPreStart http://127.0.0.1:3128/
 PassengerUseGlobalQueue off
+RackBaseURI /app
 
-<Directory /var/www/stickshift/site/public>
+<Directory /var/www/html/app>
     Options -MultiViews
 </Directory>
