--- a/stickshift/broker/httpd/broker.conf
+++ b/stickshift/broker/httpd/broker.conf
@@ -1,12 +1,8 @@
 ServerRoot "/var/www/stickshift/broker/httpd"
-DocumentRoot "/var/www/stickshift/broker/public"
+DocumentRoot "/var/www/stickshift/broker/httpd/root"
 Listen 127.0.0.1:8080
 User apache
 Group apache
-
-Alias /app/images /var/www/stickshift/broker/public/images
-Alias /app/javascripts /var/www/stickshift/broker/public/javascripts
-Alias /app/stylesheets /var/www/stickshift/broker/public/stylesheets
 
 PassengerUser apache
 PassengerMaxPoolSize 80
@@ -14,6 +10,7 @@ PassengerMinInstances 2
 RailsEnv development
 PassengerPreStart http://127.0.0.1:8080/
 PassengerUseGlobalQueue off
+RackBaseURI /broker
 
 <Directory /var/www/stickshift/broker/public>
     Options -MultiViews
