Colocation hack for jenkins client -- need a better method to do this in the descriptor.

--- a/cartridges/haproxy-1.4/info/manifest.yml
+++ b/cartridges/haproxy-1.4/info/manifest.yml
@@ -18,6 +18,8 @@ Publishes:
   get-doc-root:
     Type: "FILESYSTEM:doc-root"
 Subscribes:
+  haproxy-colocation-hack:
+    Type: "FILESYSTEM:haproxy:colocate-hack"
   set-proxy:
     Type: "NET_TCP:httpd-proxy-info"
     Required : false
