--- a/cartridges/jenkins-client-1.4/info/manifest.yml
+++ b/cartridges/jenkins-client-1.4/info/manifest.yml
@@ -14,6 +14,8 @@ Reservations:
   - MEM >= 10MB
 Service-Dependencies: ["rhc-cartridge-jenkins-1.4"]
 Publishes:
+  colocate-with-haproxy-hack:
+    Type: "FILESYSTEM:haproxy:colocate-hack"
   get-job-interface-url:
     Type: "NET_TCP:jenkins:job-url"
 Subscribes:
