--- a/cartridges/jbossas-7/info/bin/standalone.conf
+++ b/cartridges/jbossas-7/info/bin/standalone.conf
@@ -52,7 +52,9 @@ sed -i -e "s/\${mysql.enabled}/$MYSQL_ENABLED/g" \
        -e "s/\${postgresql.enabled}/$POSTGRESQL_ENABLED/g" \
        -e "s/<loopback-address value=\".*\"\/>/<loopback-address value=\"${OPENSHIFT_INTERNAL_IP}\"\/>/g" \
        -e "s/\${env.OPENSHIFT_JBOSS_CLUSTER}/$OPENSHIFT_JBOSS_CLUSTER/g" \
-       -e "s/\${OPENSHIFT_INTERNAL_IP}/$OPENSHIFT_INTERNAL_IP/g" "${OPENSHIFT_GEAR_DIR}${OPENSHIFT_GEAR_TYPE}"/standalone/configuration/standalone.xml > /dev/null 2>&1
+       -e "s/\${env.OPENSHIFT_JBOSS_CLUSTER_PROXY_PORT}/$OPENSHIFT_JBOSS_CLUSTER_PROXY_PORT/g" \
+       -e "s/\${env.OPENSHIFT_GEAR_DNS}/$OPENSHIFT_GEAR_DNS/g" \
+       -e "s/\${env.OPENSHIFT_INTERNAL_IP}/$OPENSHIFT_INTERNAL_IP/g" "${OPENSHIFT_GEAR_DIR}${OPENSHIFT_GEAR_TYPE}"/standalone/configuration/standalone.xml > /dev/null 2>&1
        
 resource_limits_file=`readlink -f /etc/stickshift/resource_limits.conf`
 resource_limits_file_name=`basename $resource_limits_file`
@@ -83,7 +85,7 @@ esac
 # Specify options to pass to the Java VM.
 #
 if [ "x$JAVA_OPTS" = "x" ]; then
-   JAVA_OPTS="$memory_options -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true -Djboss.node.name=${OPENSHIFT_GEAR_DNS}"                                                                                                                                                
+   JAVA_OPTS="$memory_options -Dorg.jboss.resolver.warning=true -Djava.net.preferIPv4Stack=true -Djboss.node.name=${OPENSHIFT_GEAR_DNS} -Djgroups.bind_addr=${OPENSHIFT_INTERNAL_IP}"                                                                                                                                                
 fi
 
 # Add the user module path ahead of the server modules root
