Adding obsoletes to cartridges and renamng rack=>ruby wsgi=>python

--- a/stickshift/broker/Gemfile
+++ b/stickshift/broker/Gemfile
@@ -11,10 +11,7 @@ gem 'open4'
 gem 'stickshift-node'
 gem 'stickshift-controller'
 
-gem 'swingshift-mongo-plugin'
-gem 'uplift-bind-plugin'
-gem 'crankcase-mongo-plugin'
-gem 'gearchanger-oddjob-plugin'
+# Add plugin gems here
 
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
@@ -42,3 +39,5 @@ group :development, :test do
   # The require part from http://tinyurl.com/3pf68ho
   gem 'mocha', :require => nil
 end
+
+
