Scaling commands are really expensive. Ex: jboss takes 3:30 to scale.  Increase the broker timeout so that they can show successful completion.

--- a/misc/devenv/etc/httpd/conf.d/000000_default.conf
+++ b/misc/devenv/etc/httpd/conf.d/000000_default.conf
@@ -50,6 +50,7 @@
   SSLCertificateFile /etc/pki/tls/certs/localhost.crt
   SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
   RequestHeader set X_FORWARDED_PROTO 'https'
+  ProxyTimeout 300
   ProxyPass /app http://127.0.0.1:3128/app
   ProxyPassReverse /app http://127.0.0.1:3128/app
   ProxyPass /broker http://127.0.0.1:8080/broker
