--- a/stickshift/broker/httpd/000000_stickshift_proxy.conf
+++ b/stickshift/broker/httpd/000000_stickshift_proxy.conf
@@ -49,6 +49,7 @@
   SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
   RequestHeader set X_FORWARDED_PROTO 'https'
   RequestHeader set Front-End-Https "On"
+  ProxyTimeout 300
   ProxyPass /broker http://127.0.0.1:8080/broker
   ProxyPassReverse /broker http://127.0.0.1:8080/broker
 </VirtualHost>
