--- a/broker/Gemfile
+++ b/broker/Gemfile
@@ -12,6 +12,9 @@ gem 'open4'
 gem 'regin'
 gem 'stickshift-controller'
 gem 'uplift-dynect-plugin'
+gem 'crankcase-mongo-plugin'
+gem 'swingshift-streamline-plugin'
+gem 'gearchanger-m-collective-plugin'
 gem 'rest-client'
 gem 'thread-dump'
 
