Modify passengerprestart URL to warm up the rails apps in the devenv

--- a/misc/devenv/httpd/site/httpd/site.conf
+++ b/misc/devenv/httpd/site/httpd/site.conf
@@ -8,7 +8,7 @@ PassengerUser libra_passenger
 PassengerMaxPoolSize 80
 PassengerMinInstances 2
 RailsEnv development
-PassengerPreStart http://127.0.0.1:3128/
+PassengerPreStart http://127.0.0.1:3128/app
 PassengerUseGlobalQueue off
 RackBaseURI /app
 
