--- a/misc/devenv/httpd/broker/httpd/broker.conf
+++ b/misc/devenv/httpd/broker/httpd/broker.conf
@@ -8,7 +8,7 @@ PassengerUser libra_passenger
 PassengerMaxPoolSize 80
 PassengerMinInstances 2
 RailsEnv development
-PassengerPreStart http://127.0.0.1:8080/
+PassengerPreStart http://127.0.0.1:8080/broker
 PassengerUseGlobalQueue off
 RackBaseURI /broker
 
