More aggressive gitignore

--- a/site/.gitignore
+++ b/site/.gitignore
@@ -3,4 +3,6 @@ vendor/*
 .bundle
 log/*
 tmp/*
-public/stylesheets/.sass-cache/
+public/stylesheets/
+.sass-cache/
+app/subsites/status/db/status.sqlite3
