--- a/billing/Gemfile
+++ b/billing/Gemfile
@@ -1,29 +1,18 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.1.1'
+gem 'rails', '~> 3.0.10'
+gem 'json'
+gem 'parseconfig'
 gem 'mongo'
+gem 'xml-simple'
 gem 'rack'
-gem 'open4'
-gem 'stickshift-controller'
+gem 'regin'
 gem 'rest-client'
-gem 'thread-dump'
-gem 'ruby-prof'
+
+# Add plugin gems here
 
 # Bundle edge Rails instead:
-# gem 'rails',     :git => 'git://github.com/rails/rails.git'
-
-gem 'json'
-
-# Gems used only for assets and not required
-# in production environments by default.
-#group :assets do
-#  gem 'sass-rails',   '~> 3.1.4'
-#  gem 'coffee-rails', '~> 3.1.1'
-#  gem 'uglifier', '>= 1.0.3'
-#end
-
-# To use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.0.0'
+# gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 # Use unicorn as the web server
 # gem 'unicorn'
@@ -31,6 +20,20 @@ gem 'json'
 # Deploy with Capistrano
 # gem 'capistrano'
 
-# To use debugger
+# To use debugger (ruby-debug for Ruby 1.8.7+, ruby-debug19 for Ruby 1.9.2+)
 # gem 'ruby-debug'
+# gem 'ruby-debug19', :require => 'ruby-debug'
 
+# Bundle the extra gems:
+# gem 'bj'
+# gem 'nokogiri'
+# gem 'sqlite3-ruby', :require => 'sqlite3'
+# gem 'aws-s3', :require => 'aws/s3'
+
+# Bundle gems for the local environment. Make sure to
+# put test-only gems in this group so their generators
+# and rake tasks are available in development mode:
+group :development, :test do
+  # The require part from http://tinyurl.com/3pf68ho
+  gem 'mocha', :require => nil
+end
