--- a/billing/httpd/billing.conf
+++ b/billing/httpd/billing.conf
@@ -8,7 +8,7 @@ PassengerUser apache
 PassengerMaxPoolSize 80
 PassengerMinInstances 2
 RailsEnv development
-PassengerPreStart http://127.0.0.1:9090/
+PassengerPreStart http://127.0.0.1:9090/billing
 PassengerUseGlobalQueue off
 RackBaseURI /billing
 
