Add rcov to broker and as a dependency for devenv for build & test.

--- a/broker/Gemfile
+++ b/broker/Gemfile
@@ -43,4 +43,5 @@ gem 'ruby-prof'
 group :development, :test do
   # The require part from http://tinyurl.com/3pf68ho
   gem 'mocha', :require => nil
+  gem 'rcov', :require => nil
 end
