Removed proxy balance from express.conf 05 14 2012

--- a/misc/devenv/etc/httpd/conf.d/express.conf
+++ b/misc/devenv/etc/httpd/conf.d/express.conf
@@ -11,11 +11,11 @@ ProxyTimeout 300
 
 ProxyPassReverse /app https://localhost/app
 
-ProxyPass /app balancer://ex-srv/app
+## ProxyPass /app balancer://ex-srv/app
 
 ProxyPassReverse /broker https://localhost/broker
 
-ProxyPass /broker balancer://ex-srv/broker
+## ProxyPass /broker balancer://ex-srv/broker
 
 #ProxyPass /app https://localhost:8080/app
 
